--- a/saga-gis/debian/rules
+++ b/saga-gis/debian/rules
@@ -28,6 +28,7 @@ override_dh_auto_configure: templates
 		--enable-openmp \
 		--enable-python \
 		--with-system-dxflib \
+		--disable-opencv \
 		$(shell dpkg-buildflags --export=configure)
 
 override_dh_auto_build:
