--- a/saga-gis/debian/control
+++ b/saga-gis/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9),
                libexpat-dev,
                libgdal-dev,
                libhpdf-dev,
-               libogdi3.2-dev,
+               libogdi-dev,
                libopencv-core-dev,
                libopencv-dev | libcv-dev,
                libopencv-dev | libopencv-contrib-dev,
@@ -22,8 +22,8 @@ Build-Depends: debhelper (>= 9),
                libqhull-dev,
                libsvm-dev,
                libvigraimpex-dev,
-               libwxgtk3.0-dev,
-               python-dev,
+               libwxgtk3.0-gtk3-dev,
+               python3-dev,
                swig
 Standards-Version: 4.2.0
 Vcs-Browser: https://salsa.debian.org/debian-gis-team/saga
