--- a/ci/Dockerfile-bullseye
+++ b/ci/Dockerfile-bullseye
@@ -3,6 +3,6 @@ RUN sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list && \
     cat /etc/apt/sources.list  
 RUN apt-get update && apt-get upgrade -y && \
     DEBIAN_FRONTEND=noninteractive apt-get -y install tzdata && \
-    apt-get install dh-autoreconf dh-python libdxflib-dev libexpat-dev libgdal-dev libhpdf-dev libogdi-dev libproj-dev \
-      libqhull-dev libsvm-dev libvigraimpex-dev libwxgtk3.0-gtk3-dev python3-dev swig -y && \
-    apt-get install -y git-buildpackage
+    apt-get install -y dh-autoreconf dh-python libdxflib-dev libexpat-dev libgdal-dev libhpdf-dev libogdi-dev libproj-dev \
+      libqhull-dev libsvm-dev libvigraimpex-dev libwxgtk3.0-gtk3-dev python3-dev swig git-buildpackage \
+    libopencv-dev
