Working debian install for package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,11 @@ if(MSVC)
 	set(CMAKE_EXE_LINKER_FLAGS_DEBUG    "/debug /INCREMENTAL /LTCG:OFF" CACHE STRING "" FORCE)
 	set(CMAKE_MODULE_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL /LTCG:OFF" CACHE STRING "" FORCE)
 	set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL /LTCG:OFF" CACHE STRING "" FORCE)
+else()
+    set(CMAKE_CXX_FLAGS "-I /usr/include/saga/")
 endif()
 
 # options
-option(WITH_GUI "Build SAGA with GUI" ON)
 option(WITH_TOOLS "Build SAGA with tools" ON)
 option(OpenMP_SUPPORT "Compile with OpenMP optimizations" ON)
 #option(WITH_LINK_TESTER "Check to enable testing if tools are successfully linking" OFF)
