Update drone to build debian package

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,11 +7,7 @@ steps:
   - name: build bullseye
     image: registry.fluves.net/drone/saga-watem/build-bullseye
     commands:
-      - cd saga-gis
-      - apt install -y dh-python
-        # not working as debian is unfortunately not in the main dir
-        #- gbp dch --snapshot --ignore-branch --snapshot-number=$DRONE_BUILD_NUMBER
-        # Alternative version
+      - apt install libsaga
       - dch --newversion $(dpkg-parsechangelog --show-field Version)+$DRONE_BUILD_NUMBER "Automated build for $DRONE_COMMIT~bullseye"
       - debuild -b -us -uc -j8
       - mkdir ../package
@@ -35,43 +31,42 @@ steps:
         exclude:
           - pull_request
 ---
-kind: pipeline
-type: docker
-name: focal build
-
-steps:
-  - name: build focal
-    image: registry.fluves.net/drone/saga-watem/build-focal
-    commands:
-      - cd saga-gis
-      - apt install -y dh-python
-        # not working as debian is unfortunately not in the main dir
-        #- gbp dch --snapshot --ignore-branch --snapshot-number=$DRONE_BUILD_NUMBER
-        # Alternative version
-      - dch --newversion $(dpkg-parsechangelog --show-field Version)+$DRONE_BUILD_NUMBER "Automated build for $DRONE_COMMIT~focal"
-      - debuild -b -us -uc -j8
-      - mkdir ../package
-      - mv ../*saga*deb ../package
-
-  - name: rsync-apt
-    image: drillster/drone-rsync
-    settings:
-      hosts:
-        - ijzer
-      user: docs
-      key:
-         from_secret: ssh-key
-      source: package/*.deb
-      target: /appdata/static/apt/amd64
-    when:
-      branch:
-        - master
-        - saga-watem
-        - drone
-      event:
-        exclude:
-          - pull_request
-
+#kind: pipeline
+# name: focal build
+# 
+# steps:
+#   - name: build focal
+#     image: registry.fluves.net/drone/saga-watem/build-focal
+#     commands:
+#       - cd saga-gis
+#       - apt install -y dh-python
+#         # not working as debian is unfortunately not in the main dir
+#         #- gbp dch --snapshot --ignore-branch --snapshot-number=$DRONE_BUILD_NUMBER
+#         # Alternative version
+#       - dch --newversion $(dpkg-parsechangelog --show-field Version)+$DRONE_BUILD_NUMBER "Automated build for $DRONE_COMMIT~focal"
+#       - debuild -b -us -uc -j8
+#       - mkdir ../package
+#       - mv ../*saga*deb ../package
+# 
+#   - name: rsync-apt
+#     image: drillster/drone-rsync
+#     settings:
+#       hosts:
+#         - ijzer
+#       user: docs
+#       key:
+#          from_secret: ssh-key
+#       source: package/*.deb
+#       target: /appdata/static/apt/amd64
+#     when:
+#       branch:
+#         - master
+#         - saga-watem
+#         - drone
+#       event:
+#         exclude:
+#           - pull_request
+# 
 ---
 kind: pipeline
 type: docker
