--- a/ci/Dockerfile-bullseye
+++ b/ci/Dockerfile-bullseye
@@ -3,4 +3,4 @@ RUN echo "deb [trusted=yes] https://apt.fluves.net/bullseye/ /" >/etc/apt/source
     apt-get update && apt-get upgrade -y && \
     apt-get -y install ca-certificates && \
     apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get -y install git-buildpackage libsaga-dev
+    DEBIAN_FRONTEND=noninteractive apt-get -y install git-buildpackage libsaga-dev cmake
