--- a/.drone.yml
+++ b/.drone.yml
@@ -38,10 +38,13 @@ platform:
 steps:
   - name: build dll
     image: registry.fluves.net/drone/saga-watem/build-windows
+    environment:
+      SAGA: c:\saga\saga-8.2.1_x64
     commands:
     - mkdir build
     - cd build
     - cmake ..
+    - CMD "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\BuildTools\\Common7\\Tools\\VsDevCmd.bat"
     - msbuild saga-vpo.sln
 # ---
 #kind: pipeline
