--- a/.drone.yml
+++ b/.drone.yml
@@ -44,8 +44,7 @@ steps:
     - mkdir build
     - cd build
     - cmake ..
-    - CMD "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\BuildTools\\Common7\\Tools\\VsDevCmd.bat"
-    - msbuild saga-vpo.sln
+    - "C:/Program Files (x86)/Microsoft Visual Studio/2017/MSBuild/Current/Bin/msbuild saga-vpo.sln"
 # ---
 #kind: pipeline
 # name: focal build
