Another attempt in the wall

--- a/ci/Dockerfile-windows
+++ b/ci/Dockerfile-windows
@@ -17,5 +17,6 @@ RUN choco install cmake --installargs 'ADD_CMAKE_TO_PATH=""System""'
 
 RUN powershell Invoke-WebRequest https://jztkft.dl.sourceforge.net/project/saga-gis/SAGA%20-%208/SAGA%20-%208.2.1/saga-8.2.1_x64.zip -OutFile saga_8.2.1-X64.zip
 RUN powershell Expand-Archive -Path saga_8.2.1-X64.zip -DestinationPath c:\saga\
+RUN setx path "%path%;C:/Program Files (x86)/Microsoft Visual Studio/2017/MSBuild/Current/Bin"
 
 ENTRYPOINT ["C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\BuildTools\\Common7\\Tools\\VsDevCmd.bat", "&&", "powershell.exe", "-NoLogo", "-ExecutionPolicy", "Bypass"]
