--- a/.drone.yml
+++ b/.drone.yml
@@ -44,7 +44,7 @@ steps:
     - mkdir build
     - cd build
     - cmake ..
-    - "C:/Program Files (x86)/Microsoft Visual Studio/2017/MSBuild/Current/Bin/msbuild saga-vpo.sln"
+    - msbuild saga-vpo.sln
 # ---
 #kind: pipeline
 # name: focal build
