--- a/.drone.yml
+++ b/.drone.yml
@@ -44,8 +44,7 @@ steps:
     - mkdir build
     - cd build
     - cmake ..
-    - RUN setx path "%path%;C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\MSBuild\\Current\\Bin"
-    - msbuild saga-vpo.sln
+    - "\"C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\MSBuild\\Current\\Bin\" saga_vpo.sln"
 # ---
 #kind: pipeline
 # name: focal build
