--- a/.drone.yml
+++ b/.drone.yml
@@ -44,7 +44,7 @@ steps:
     - mkdir build
     - cd build
     - cmake ..
-    - cmd /c ""C:\Program Files (x86)\Microsoft Visual Studio\2017\MSBuild\Current\Bin\msbuild"" saga_vpo.sln
+    - cmd /c ""C:/Program Files (x86)/Microsoft Visual Studio/2017/MSBuild/Current/Bin/msbuild"" saga_vpo.sln
 # ---
 #kind: pipeline
 # name: focal build
