--- a/ci/Dockerfile-windows
+++ b/ci/Dockerfile-windows
@@ -6,17 +6,31 @@ RUN @"%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe" -NoProfile -I
 # install visualcpp-build-tools
 RUN `
     powershell -NoProfile -InputFormat None -Command `
+    choco feature enable -n=allowGlobalConfirmation; `
     choco install git 7zip -y; `
-    choco install visualcpp-build-tools `
-        --version 15.0.26228.20170424 -y; `
-    Write-Host 'Waiting for Visual C++ Build Tools to finish'; `
-    Wait-Process -Name vs_installer
+    choco install cmake --installargs 'ADD_CMAKE_TO_PATH=""System""'; 
 
-RUN choco feature enable -n=allowGlobalConfirmation
-RUN choco install cmake --installargs 'ADD_CMAKE_TO_PATH=""System""' 
+RUN `
+    # Download the Build Tools bootstrapper.
+    curl -SL --output vs_buildtools.exe https://aka.ms/vs/16/release/vs_buildtools.exe `
+    `
+    # Install Build Tools with the Microsoft.VisualStudio.Workload.AzureBuildTools workload, excluding workloads and components with known issues.
+    && (start /w vs_buildtools.exe --quiet --wait --norestart --nocache `
+        --installPath "%ProgramFiles(x86)%\Microsoft Visual Studio\2019\BuildTools" `
+        --add Microsoft.VisualStudio.Workload.AzureBuildTools `
+        --remove Microsoft.VisualStudio.Component.Windows10SDK.10240 `
+        --remove Microsoft.VisualStudio.Component.Windows10SDK.10586 `
+        --remove Microsoft.VisualStudio.Component.Windows10SDK.14393 `
+        --remove Microsoft.VisualStudio.Component.Windows81SDK `
+        || IF "%ERRORLEVEL%"=="3010" EXIT 0) `
+    `
+    # Cleanup
+    && del /q vs_buildtools.exe
 
+# Fetch saga gis and extract
 RUN powershell Invoke-WebRequest https://jztkft.dl.sourceforge.net/project/saga-gis/SAGA%20-%208/SAGA%20-%208.2.1/saga-8.2.1_x64.zip -OutFile saga_8.2.1-X64.zip
 RUN powershell Expand-Archive -Path saga_8.2.1-X64.zip -DestinationPath c:\saga\
-RUN setx path "%path%;C:/Program Files (x86)/Microsoft Visual Studio/2017/MSBuild/Current/Bin"
 
-ENTRYPOINT ["C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\BuildTools\\Common7\\Tools\\VsDevCmd.bat", "&&", "powershell.exe", "-NoLogo", "-ExecutionPolicy", "Bypass"]
+# Define the entry point for the docker container.
+# This entry point starts the developer command prompt and launches the PowerShell shell.
+ENTRYPOINT ["C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\BuildTools\\Common7\\Tools\\VsDevCmd.bat", "&&", "powershell.exe", "-NoLogo", "-ExecutionPolicy", "Bypass"]
