--- a/.drone.yml
+++ b/.drone.yml
@@ -43,7 +43,7 @@ steps:
     commands:
     - mkdir build
     - cd build
-    - cmake ..
+    - cmake .. -G "Visual Studio 16 2019" -A x64
     - ../ci/build-win.bat
     - dir release/*
   - name: publish dll on release
