--- a/.drone.yml
+++ b/.drone.yml
@@ -40,6 +40,8 @@ steps:
     - cmake .. -G "Visual Studio 16 2019" -A x64
     - ../ci/build-win.bat
     - dir release/*
+    failure: ignore
+
   - name: publish dll on release
     image: registry.fluves.net/test/drone-plugin-windows
     settings:
