--- a/network/topologize/CMakeLists.txt
+++ b/network/topologize/CMakeLists.txt
@@ -1,5 +1,5 @@
 if(WITH_TOOLS)
-	project(topologize)
+	project(topology)
 
 	# load common tool template
 	include(../../CMakePluginTemplate.cmake )
