--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-
+build
 # macOS tmp file
 .DS_Store*
+debian/.debhelper/
+debian/files
+debian/saga-vpo.debhelper.log
+debian/saga-vpo.substvars
+debian/saga-vpo/
 
