--- a/ci/Dockerfile-focal
+++ b/ci/Dockerfile-focal
@@ -1,5 +1,8 @@
-FROM ubuntu:focal
-RUN apt-get update && apt-get upgrade -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get -y install tzdata dh-autoreconf dh-python libdxflib-dev libexpat-dev libgdal-dev libhpdf-dev libogdi-dev libproj-dev \
-      libqhull-dev libsvm-dev libvigraimpex-dev libwxgtk3.0-gtk3-dev python3-dev swig git-buildpackage \
-    libopencv-dev
+FROM ubuntu:20.04
+RUN apt-get update \
+    && apt-get install -y ca-certificates \
+    && echo "deb [trusted=yes] https://apt.fluves.net/ /" >/etc/apt/sources.list.d/fluves.list \
+    && apt-get update \
+    && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gdal-bin pandoc git-lfs saga libsaga-dev --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
+
