--- a/ci/Dockerfile-focal
+++ b/ci/Dockerfile-focal
@@ -3,6 +3,6 @@ RUN apt-get update \
     && apt-get install -y ca-certificates \
     && echo "deb [trusted=yes] https://apt.fluves.net/ /" >/etc/apt/sources.list.d/fluves.list \
     && apt-get update \
-    && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gdal-bin pandoc git-lfs saga libsaga-dev devscripts --no-install-recommends \
+    && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gdal-bin pandoc git-lfs saga libsaga-dev devscripts build-essential cmake --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
