--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,34 @@
 tests/data/ filter=lfs diff=lfs merge=lfs -text
+tests/data/circle-larger.mshp filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_circle.mshp filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial.cpg filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_split.shp filter=lfs diff=lfs merge=lfs -text
+tests/data/topology.shp filter=lfs diff=lfs merge=lfs -text
+tests/data/circle-larger.dbf filter=lfs diff=lfs merge=lfs -text
+tests/data/topology.dbf filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial.mshp filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial.shx filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_split.prj filter=lfs diff=lfs merge=lfs -text
+tests/data/mask.rdc filter=lfs diff=lfs merge=lfs -text
+tests/data/topology.mshp filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_circle.prj filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_circle.shp filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial.dbf filter=lfs diff=lfs merge=lfs -text
+tests/data/mask.rst filter=lfs diff=lfs merge=lfs -text
+tests/data/circle-larger.shx filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_split.mshp filter=lfs diff=lfs merge=lfs -text
+tests/data/circle-larger.cpg filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_circle.shx filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_split.cpg filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_split.shx filter=lfs diff=lfs merge=lfs -text
+tests/data/langegracht filter=lfs diff=lfs merge=lfs -text
+tests/data/topology.prj filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_circle.cpg filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial.prj filter=lfs diff=lfs merge=lfs -text
+tests/data/topology.cpg filter=lfs diff=lfs merge=lfs -text
+tests/data/topology.shx filter=lfs diff=lfs merge=lfs -text
+tests/data/circle-larger.prj filter=lfs diff=lfs merge=lfs -text
+tests/data/circle-larger.shp filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_circle.dbf filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial.shp filter=lfs diff=lfs merge=lfs -text
+tests/data/input_artificial_split.dbf filter=lfs diff=lfs merge=lfs -text
