--- a/ci/Dockerfile-bookworm
+++ b/ci/Dockerfile-bookworm
@@ -1,6 +1,4 @@
-FROM ubuntu:focal
-ARG DEBIAN_FRONTEND=noninteractive
-ENV TZ=Etc/UTC
+FROM debian:bookworm
 RUN apt-get update && apt-get upgrade -y && \
     apt-get -y install --no-install-recommends git-buildpackage g++ libsaga-dev saga cmake python3-pytest python3-rasterio python3-geopandas && \
     rm -rf /var/lib/apt/lists/*
