--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -63,7 +63,7 @@ jobs:
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} `
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} `
         -S ${{ github.workspace }}
-        7za a -tzip -mx=9 -r -i!build\*.dll -xr!* saga_watem.zip
+        7z a -tzip saga_watem.zip .\watem\watem\Release\*.dll .\network\topology\Release\*.dll .\network\line_direction\Release\*.dll
 
 
     - name: Build
