--- a/.github/workflows/docker-cmake-bullseye.yml
+++ b/.github/workflows/docker-cmake-bullseye.yml
@@ -42,7 +42,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: run cmake
       run: |
-        git pull --tags
+        git pull
+        git fetch --tags
         dch --newversion $(git describe --tags)  "autobuild $(git describe --tags)"
         debuild -b
 
