--- a/.github/workflows/docker-cmake-bullseye.yml
+++ b/.github/workflows/docker-cmake-bullseye.yml
@@ -42,6 +42,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-tags: true
+        fetch-depth: 0
     - name: run cmake
       run: |
         dch --newversion $(git describe --tags)  "autobuild $(git describe --tags)"
