--- a/.github/workflows/docker-cmake.yml
+++ b/.github/workflows/docker-cmake.yml
@@ -24,8 +24,9 @@ jobs:
         cd build
         cmake ..
         make
-        cd ..
-        pytest-3 -vv || true
+    - name: run tests
+      run: |
+        pytest-3 -vv
       
   bullseye-container-build-deb:
     runs-on: ubuntu-latest
@@ -46,5 +47,4 @@ jobs:
     - name: run cmake
       run: |
         dch --newversion $(git describe --tags)  "autobuild $(git describe --tags)"
-        debuild -b
-
+        fakeroot debian/rules binary
