--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -63,13 +63,12 @@ jobs:
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} `
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} `
         -S ${{ github.workspace }}
-        7z a -tzip saga_watem.zip -r .build\watem\watem\Release\*.dll .\build\network\topology\Release\*.dll .\build\network\line_direction\Release\*.dll 
-
-
-
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: |
+        cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+        cmake --install --prefix install
+        7z a -tzip saga_watem.zip install\*.dll
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v3
       with:
