--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -67,7 +67,7 @@ jobs:
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: |
         cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
-        cmake --install --prefix install
+        cmake --install install
         7z a -tzip saga_watem.zip install\*.dll
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v3
