--- a/.github/workflows/docker-cmake.yml
+++ b/.github/workflows/docker-cmake.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: ["debian:bullseye", "debian:bookworm", "ubuntu:focal"]
+        os: ["debian:bullseye", "debian:bookworm", "ubuntu:focal", "ubuntu:jammy"]
     container:
       image: ghcr.io/johanvdw/saga-watem-build-${{ matrix.os }}
       options: --user 1001
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: ["debian:bullseye", "debian:bookworm", "ubuntu:focal"]
+        os: ["debian:bullseye", "debian:bookworm", "ubuntu:focal", "ubuntu:jammy"]
     container:
       image: ghcr.io/johanvdw/saga-watem-build-${{ matrix.os }}
       options: --user 1001
