Make sure linux/windows can be called from release

--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -3,6 +3,7 @@ name: 'Build on debian/ubuntu in container'
 on:
   push:
     branches: [main, gha]
+  workflow_dispatch:
 
 jobs:
   bullseye-container-test:
