--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main","gha" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:
+  workflow_call:
 
 jobs:
   build:
