--- a/.github/workflows/cmake-linux.yml
+++ b/.github/workflows/cmake-linux.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main, gha]
   workflow_call:
+    secrets:
+      PRIVATE_ACCESS_TOKEN:
+        required: true
 
 jobs:
   bullseye-container-test:
