--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,18 +14,14 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Create Release
         id: create_release
         uses: elgohr/Github-Release-Action@v5
         env:
           GITHUB_TOKEN: ${{ secrets.PRIVATE_ACCESS_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: ""
-          # note: created as draft, release note should be edited manually
-          draft: true
-          prerelease: false
+          title: Release ${{ github.ref }}
       - name: fetch linux builds (zip)
         uses: actions/download-artifact@master
         with:
